# BeamLabStudio

./: .clang-format  .clangd  .gitignore  .zenodo.json  ARCHITECTURE_AUDIT.md  BIOSIM_MEMORY.txt  BeamLabStudio.command  BeamLabStudio_Audit_Completo.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  NEW_ARCHITECTURE.md  PLAN_DE_ATAQUE.md  README.md  README_nuevo.txt  launch_beamlabstudio.bat  launch_beamlabstudio.sh  pyproject.toml  pytest.ini  setup.py
.claude/: PHASE_STATE.md
assets/: math_docs.html
config/: default_analysis.json  materials_builtin.json  particles_builtin.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  PLAN_MAESTRO.md  PLUGIN_DEVELOPMENT.md  RECONSTRUCCION.md  checklist_fase4.md  checklist_fase5.md  checklist_fase6.md  checklist_fase8.md  checklist_fase9.md
scripts/: generate_math_docs.py  generate_synthetic_csv.py  make_icns.sh  migrate_biosim_to_domain.sh  package_macos.sh  run_beamlab_full.cmd  run_beamlab_full.py  (+3 more)
src/domain/: CMakeLists.txt
src/domain/geometry/: Slab.h
src/domain/materials/: Material.h  MaterialRegistry.cpp  MaterialRegistry.h
src/domain/physics/: Particle.h  ParticleRegistry.cpp  ParticleRegistry.h
src/domain/simulation/: SimulationEngine.cpp  SimulationEngine.h
src/platform/: CMakeLists.txt  CommandBus.cpp  CommandBus.h  EventBus.cpp  EventBus.h  IPlugin.h  PluginHost.cpp  ServiceRegistry.cpp  ServiceRegistry.h
src/plugins/: CMakeLists.txt
src/plugins/importers/template/: CMakeLists.txt  ExampleImporter.cpp  ExampleImporter.h  README.md
src/scripting/: CMakeLists.txt  __init__.py
src/scripting/examples/: README.md  quickstart.ipynb
src/scripting/pybind11/: CMakeLists.txt  beamlab_module.cpp
src/services/: CMakeLists.txt
src/services/analysis/: AnalysisOrchestrator.cpp  AnalysisOrchestrator.h  JobScheduler.cpp  JobScheduler.h  ThreadPool.cpp  ThreadPool.h
src/services/analysis/engines/: EngineResult.h  FrameStatisticsPlugin.cpp  FrameStatisticsPlugin.h  IAnalysisEngine.h
src/services/export/: CMakeLists.txt  CsvExporter.cpp  CsvExporter.h  ExporterRegistry.cpp  ExporterRegistry.h  IExporter.h  ObjExporter.cpp  ObjExporter.h  ParquetExporter.cpp  ParquetExporter.h
src/services/import/: CMakeLists.txt  ComsolCsvImporter.cpp  ComsolCsvImporter.h  DelimitedTableImporter.cpp  DelimitedTableImporter.h  Geant4CsvImporter.cpp  Geant4CsvImporter.h  HeaderAnalyzer.cpp  HeaderAnalyzer.h  IImporter.h  ImporterRegistry.cpp  ImporterRegistry.h  RootNativeImporter.cpp  RootNativeImporter.h
src/services/storage/: IStorageBackend.h  QueryCache.cpp  QueryCache.h  SqliteBackend.cpp  SqliteBackend.h  StorageManager.cpp  StorageManager.h
src/ui/: CMakeLists.txt
src/ui/qt/: InfoWidget.cpp  InfoWidget.h  InteractiveGraphicsView.cpp  InteractiveGraphicsView.h  MainWindow.cpp  MainWindow.cpp.bak.dock_fix_20260424_234858  MainWindow.cpp.bak.final_windows_runner_20260425_013627  MainWindow.cpp.bak.resize_stats_20260425_000203  MainWindow.cpp.bak.scroll_docks.20260424_234613  MainWindow.cpp.bak.stats_clean_20260425_000533  MainWindow.cpp.bak.visibility_stats_20260424_235404  MainWindow.cpp.bak.welcome_size_20260425_000832  MainWindow.cpp.bak.windows_runner_20260425_011952  MainWindow.h  MainWindow.h.bak.20260424_233614  ObjViewerWidget.cpp  ObjViewerWidget.h  RunDashboardWidget.cpp  RunDashboardWidget.h  Scene3DWidget.cpp  Scene3DWidget.h  SimulatorWidget.cpp  SimulatorWidget.h  StatsDashboardWidget.cpp  StatsDashboardWidget.cpp.bak.warning_20260424_235404  StatsDashboardWidget.h  main.cpp  resources.qrc
src/ui/qt/assets/: math_docs.html
src/ui/qt/assets/branding/: palette.json
src/ui/qt/dockable/: DockManager.cpp  DockManager.h  IDockableWidget.h
src/ui/qt/presenters/: AnalysisPresenter.cpp  AnalysisPresenter.h  BioSimPresenter.cpp  BioSimPresenter.h  ExportPresenter.cpp  ExportPresenter.h
src/ui/qt/shell/: ActionRegistry.cpp  ActionRegistry.h  CommandPalette.cpp  CommandPalette.h  NavigationRail.cpp  NavigationRail.h
src/ui/qt/styles/: beamlabstudio.qss  beamlabstudio.qss.bak.20260424_233614  beamlabstudio.qss.bak.dock_scroll_20260424_235022  beamlabstudio.qss.bak.scroll_docks.20260424_234613  beamlabstudio.qss.bak.tab_artifacts_20260425_000832
src/ui/qt/widgets/: BioSimWidget.h  BioViewport3D.h  EnergyScaleBar.h  MaterialEditorDialog.h  SlabEditor3D.h  TrajectoryInspectorPanel.h
src/ui/validation/: NistValidator.cpp  NistValidator.h
src/ui/views/: AnalysisView.h  BioSimView.cpp  BioSimView.h  ExportView.h  ValidationView.cpp  ValidationView.h
tests/integration/: CMakeLists.txt  fixtures.h  test_full_pipeline.cpp  test_plugin_discovery.cpp
tests/performance/: CMakeLists.txt  baseline.json  bench_csv_import.cpp  bench_memory_arena.cpp  bench_parallel_batch.cpp  bench_query_cache.cpp  bench_scene3d_render.cpp  bench_sqlite_batch.cpp  bench_statistics_engine.cpp
tests/unit/: CMakeLists.txt  test_AnalysisPresenter.cpp  test_BatchStatisticsEngine.cpp  test_BiosimStoppingPowerNistRegression.cpp  test_F2_fixes.cpp  test_FocusDetector.cpp  test_FrameStatisticsEngine.cpp  test_Geant4CsvImporter.cpp  test_Geant4CsvImporter_permissive.cpp  test_Geant4CsvImporter_real_formats.cpp  test_MemoryArena.cpp  test_NistValidator.cpp  test_ParquetExporter.cpp  test_PhysicsRegression.cpp  test_PhysicsRegressionFixes.cpp  test_SOBPCalculator.cpp  test_SampleStorage.cpp  test_SqliteTrajectoryRepository_cache.cpp  test_StoppingPowerEngine.cpp  test_SurfaceBuilder.cpp  test_ThreadPool.cpp  test_regression_pipeline.cpp
tests/unit/data/: simple_trajectories.csv  test_geant4_stepping.csv
tests/unit/domain/: test_BetheBlochNistRegression.cpp  test_MaterialRegistry.cpp  test_ParticleRegistry.cpp  test_SimulationEngine.cpp
tests/unit/platform/: create_dummy_plugin_so.sh  test_CommandBus.cpp  test_EventBus.cpp  test_PluginHost.cpp
tests/unit/services/: test_AnalysisOrchestrator.cpp  test_DockManager.cpp  test_ExporterRegistry.cpp  test_FrameStatisticsPlugin.cpp  test_ImporterRegistry.cpp  test_JobScheduler.cpp  test_ProfileManager.cpp  test_QueryCache.cpp
tests/unit/ui/: test_ActionRegistry.cpp
(+291 files in other folders)
