[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "pybind11>=2.12.0",
    "numpy>=1.20",
]
build-backend = "setuptools.build_meta"

[project]
name = "beamlab"
version = "3.0.0"
description = "BeamLabStudio — scientific analysis library for muon beam trajectory data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "José Labarca"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
]

[project.urls]
"Homepage" = "https://github.com/kegouro/BeamLabStudio"
"Bug Tracker" = "https://github.com/kegouro/BeamLabStudio/issues"

[tool.setuptools]
packages = []
