# ══════════════════════════════════════════════════════════════════════
#  Plugin templates (EXCLUDE_FROM_ALL in root CMakeLists.txt)
#  These are examples / templates for external plugin developers.
#  They are NOT built as part of the default build.
# ══════════════════════════════════════════════════════════════════════

# Import plugin template
add_subdirectory(importers/template)
